--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DB_URI=mongodb://localhost:27017/portfolio
-PORT=5000
+MONGO_URI=mongodb://localhost:27017/portfolio
+NODEMAILER_USER=your_email@gmail.com
+NODEMAILER_PASS=your_email_password
