Add docker-compose.yml for the portfolio website.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
-version: '3'
-
+version: '3.8'
 services:
   web:
     build: .
     ports:
-      - "5000:5000"
-    environment:
-      - NODE_ENV=production
-      - DB_URI=mongodb://mongo:27017/portfolio
+      - '5000:5000'
     depends_on:
       - mongo
-
   mongo:
     image: mongo
+    ports:
+      - '27017:27017'
     volumes:
       - mongo-data:/data/db
 
