Add CI/CD configuration using GitHub Actions.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,14 +4,10 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -22,18 +18,13 @@ jobs:
           node-version: '14'
 
       - name: Install dependencies
-        run: |
-          npm install
+        run: npm install
 
       - name: Run tests
-        run: |
-          npm test
+        run: npm test
 
-      - name: Build application
-        run: |
-          npm run build
+      - name: Build Docker image
+        run: docker build -t portfolio-website .
 
       - name: Deploy
-        run: |
-          echo 'Deploying application...'
-          # Add your deployment scripts here
+        run: echo 'Add your deployment script here'
